# HeatConduction

./: .gitignore  HeatConduction.sln  README.md
Documentation/: Documentation.tex
HeatEquation.Notebooks/: HeatEquation.ipynb
HeatEquation.Python/: HeatEquation.Python.py  HeatEquation.Python.pyproj
HeatEquationConvLSTM.Python/: HeatEquationConvLSTM.Python.py  HeatEquationConvLSTM.Python.pyproj
HeatEquationPINN.Cpp/: CMakeLists.txt  __main.cpp  main.cpp
HeatEquationPINN.Cpp/include/: Timer.h
HeatEquationPINN.Python/: HeatEquationPINN.Python.py  HeatEquationPINN.Python.pyproj  comparison.py  pipeline_2d.py  pipeline_aryal.py
HeatEquationRNN.Python/: HeatEquationRNN.Python.py  HeatEquationRNN.Python.pyproj
HeatEquationValidation.Python/: HeatEquationValidation.Python.py  HeatEquationValidation.Python.pyproj
Solver.Python/: Solver.Python.py  Solver.Python.pyproj  boundary_conditions.py  explicit_solver.py
